--- a/.eslintrc
+++ b/.eslintrc
@@ -10,7 +10,7 @@
     "node": true
   },
   "rules": {
-    "indent": [2, "tab", {"SwitchCase": 1}],
+    "indent": [2, "space", {"SwitchCase": 1}],
     "no-undef": 2,
     "no-unreachable": 2,
     "no-unused-expressions": 1,
