--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "devDependencies": {
     "chai": "^3.5.0",
+    "chai-as-promised": "^7.1.1",
     "chai-sinon": "^2.8.1",
     "mocha": "^5.2.0",
     "nodemon": "^1.18.8",
